// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton avatar shape 1`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-square"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-sm ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 4`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-circle"
      style="width: 20px; height: 20px; line-height: 20px;"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div
  class="ant-skeleton"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div
  class="ant-skeleton"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 93%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div
  class="ant-skeleton"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li
        style="width: 28%;"
      />
      <li
        style="width: 93%;"
      />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div
  class="ant-skeleton"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 93%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;
